--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,16 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
-
 }
 
 android {
-    compileSdk 31
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.nisaefendioglu.weather"
-        minSdk 21
-        targetSdk 31
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -36,26 +36,31 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Bunlara şimdilik gerek yoktu
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
+    // RETROFIT - İnternetten veri çekmeyi ve yayınlamaya yarayan kütüphaneler
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    // RXJAVA - Retrofit için ek/yardımcı kütüphaneler
+    implementation "io.reactivex.rxjava2:rxjava:2.1.1"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
-    implementation "com.github.bumptech.glide:glide:4.13.0"
+    // GLIDE - Görsellerde kullanılacak olan kütüphane
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+
 }
