--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nisaefendioglu.weather">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Weather">
-        <activity
-            android:name=".view.MainActivity"
-            android:exported="true">
+        android:theme="@style/Theme.AppCompat">
+        <activity android:name="com.nisaefendioglu.weather.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
